# mailgun-rs

./: Cargo.toml
examples/: async.rs  rocket.rs
