[package]
name = "mailgun-rs"
version = "0.2.0"
authors = ["Dongri Jin <dongrium@gmail.com>"]
description = "An unofficial client library for the Mailgun API"
edition = "2018"
repository = "https://github.com/dongri/mailgun-rs"
license = "MIT"
keywords = ["email", "mailgun"]
documentation = "https://docs.rs/mailgun-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.12", features = ["json", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-builder = "0"

[dev-dependencies]
dotenv = "0"
once_cell = "1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
rustls-tls = ["reqwest/rustls-tls"]
